[metadata]
name = py-opc-ng
version = 0.1.0
author = Filippo Argiolas
author_email = filippo.argiolas@gmail.com
license = LGPLv3
description = Python library to operate Alphasense OPC particle counters
keywords = alphasense, opc, particulates, air quality, optical particle counter
url = https://baltig.infn.it/fargiolas/opc
classifiers =
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Software Development
    Topic :: System :: Hardware

[options]
packages = find:
