[metadata]
name = py-opc-ng
version = 0.0.1
author = Filippo Argiolas
author_email = filippo.argiolas@gmail.com
license = LGPLv3
description = Python library to operate Alphasense OPC particle counters
description-file=README.md
keywords = alphasense, opc, particulates, air quality, optical particle counter
url = https://github.com/fargiolas/fargiolas/opc
classifiers =
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Software Development
    Topic :: System :: Hardware

[options]
packages = find:
