[metadata]
name = py-opc-ng
version = 0.0.3
author = Filippo Argiolas
author_email = filippo.argiolas@gmail.com
license = LGPLv3
description = Python library to operate Alphasense OPC particle counters
long_description_content_type='text/markdown'
long_description=README.md
keywords = alphasense, opc, particulates sensors, air quality, optical particle counter, opc-n2, opc-n3, opc-r1, opc-r2
url = https://github.com/fargiolas/py-opc-ng
classifiers =
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Software Development
    Topic :: System :: Hardware

[options]
packages = find:
